# GerdsenAI-Dymo-LetraTag-200B-Desktop

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
design/: HANDOFF.md  Label Studio (3 directions explored).dc.html  Label Studio App.dc.html
docs/: .nojekyll  index.html
engine/: PROTOCOL.md  pyproject.toml
engine/dymo_bluetooth/: __init__.py  __main__.py  bluetooth.py  printer.py  sidecar.py
scripts/: build-sidecar.ps1  build_sidecar.py  package-portable.ps1
src/: App.tsx  backend.ts  barcode.ts  data.ts  icons.tsx  main.tsx  raster.ts  store.tsx  styles.css  types.ts  ui.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CanvasStage.tsx  ConnectView.tsx  PrintOverlay.tsx  SettingsDrawer.tsx  Sidebar.tsx  TitleBar.tsx  WindowControls.tsx
