[package]
name = "label-studio"
version = "0.1.0"
description = "GerdsenAI Label Studio — design & print labels on a DYMO LetraTag 200B"
authors = ["GerdsenAI"]
edition = "2021"

[lib]
name = "label_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
